[tool.poetry]
name = "securities"
version = "0.1.0"
description = ""
authors = ["cow-coding <kbp0237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
googlefinance = "^0.7"
yfinance = "^0.2.41"
streamlit-lightweight-charts = "^0.7.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
